Bug 310623 - Form layout of "Moving" configuration doesn't resize horizontally/doesn't fill whitespace
Summary: Form layout of "Moving" configuration doesn't resize horizontally/doesn't fil...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 4.9.80
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-24 21:48 UTC by Elias Probst
Modified: 2012-12-14 21:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
Screenshot showing the "Moving" dialog in the kwin KCM with highlighted whitespace (93.10 KB, image/png)
2012-11-24 21:48 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2012-11-24 21:48:54 UTC
Created attachment 75458 [details]
Screenshot showing the "Moving" dialog in the kwin KCM with highlighted whitespace

The layout of the "Moving" form in the kwin KCM does not adjust horizontally when resizing the window. Instead it leaves a lot of "whitespace" on the right side.

The layout should instead simply resize along with the window to make this dialog look better.

See the attached screenshot where the unfilled area is highlighted.
Comment 1 Elias Probst 2012-11-24 21:50:12 UTC
The same applies to the "Advanced" dialog.

It does not apply IMHO to the "Focus" dialog, as there are not grouping-boxes are used.
Comment 2 Thomas Lübking 2012-11-24 22:27:04 UTC
Known. Kids broke it ;-)

https://git.reviewboard.kde.org/r/107083/
Comment 3 Thomas Lübking 2012-12-14 21:55:11 UTC
Git commit 0619c1d7bdfdb884e63295c3d9d7513c90acc3fd by Thomas Lübking.
Committed on 27/10/2012 at 23:11.
Pushed by luebking into branch 'master'.

fix kwinoptions layouts

THIS INTRODUCES NEW STRINGS, see
http://lists.kde.org/?l=kde-i18n-doc&m=135403060327161&w=2

REVIEW: 107083

M  +614  -503  kwin/kcmkwin/kwinoptions/actions.ui
M  +196  -135  kwin/kcmkwin/kwinoptions/advanced.ui
M  +250  -207  kwin/kcmkwin/kwinoptions/focus.ui
M  +2    -2    kwin/kcmkwin/kwinoptions/mouse.cpp
M  +666  -613  kwin/kcmkwin/kwinoptions/mouse.ui
M  +255  -209  kwin/kcmkwin/kwinoptions/moving.ui
M  +3    -3    kwin/kcmkwin/kwinoptions/windows.cpp

http://commits.kde.org/kde-workspace/0619c1d7bdfdb884e63295c3d9d7513c90acc3fd