fix kwinoptions layouts

THIS INTRODUCES NEW STRINGS, see
http://lists.kde.org/?l=kde-i18n-doc&m=135403060327161&w=2

REVIEW: 107083
BUG: 310623